<resources>
    <string name="app_name">My Application</string>
    <string name="BtnStart">Bắt Đầu!!</string>
    <string name="title_intro">Bằng cách nhấn nút <font color="#39c7a5">Bắt Đầu!!</font> , bạn sẽ bắt đầu trải nghiệm ứng dụng của chúng tôi!!</string>
    <string name="signing">Bạn đã có tài khoản? <font color="#39c7a5">Đăng nhập</font></string>
    <string name="signout">Bạn chưa có tài khoản? <font color="#39c7a5">Đăng kí ngay!!</font></string>
    <string name="profile">Cá nhân</string>
    <string name="order">Đơn hàng</string>
    <string name="wish_list">Yêu thích</string>
    <string name="cart">Quản lí sách</string>
    <string name="Explorer">Chính</string>
    <string name="see_all">Xem tất cả</string>
    <string name="all_book">Tất cả sách</string>
</resources>